# OOOKuban

./: .gitignore  CLAUDE.md  index.html
.claude/: launch.json
cockpit/: README.md  SHOP.md  gen_catalogs.mjs  index.html  package-lock.json  package.json  shop.html  vercel.json  vite.config.js  yd_visuals.mjs
cockpit/api/: _auth.js  _storage.js  auth.js
cockpit/server/: index.js
cockpit/src/: App.jsx  styles.css
cockpit/test/: parse.test.mjs
deploy/: HOSTING.md  cockpit.env.example  cockpit.service  deploy.sh  nginx.conf.tmpl  provision.sh  setup-nginx.sh  tgbot.env.example  tgbot.service
docs/: CATALOG.md  catalog.json
gp-variants/fullbleed/: index.html
gp-variants/matreshka-landing/: index.html
market-analytics/: matreshka-market-analytics.xlsx
matreshka-price-tool/: index.html
matreshka-price-tool/src/: App.jsx
matreshka-site/: index.html  robots.txt  sitemap.xml
matreshka-site/variants/: v1-boutique.html  v2-noir.html  v3-editorial.html  v4-laguna.html  v5-polka.html  v6-chertezh.html
presentations/horeca/: index.html
price-tool/: README.md
scripts/: green_panda.py  label_overlay.py  sync_bottles_icloud.py
tgbot/: .env.example  .gitignore  README.md  pyproject.toml
tgbot/scripts/: run.sh  setup_mac.sh
tgbot/src/: config.py  main.py
tgbot/src/asr/: whisper.py
tgbot/src/db/: migrations.sql  models.py  repo.py
tgbot/src/handlers/: __init__.py  _common.py  meetings.py  start.py  todo.py  transcribe.py
tgbot/src/listener/: controller.py  recorder.py  runner.py
tgbot/src/services/: dates.py  llm.py  notifier.py  scheduler.py
(+57 files in other folders)
