[project]
name = "greenpanda-tgbot"
version = "0.1.0"
description = "Telegram бот: todo, встречи в Я.Телемост, транскрипция"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.5",
    "python-dateutil>=2.9",
    "dateparser>=1.2",
    "playwright>=1.48",
    "faster-whisper>=1.0.3",
    "openai>=1.54",
    "httpx>=0.27",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
